# SkillOS

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
config/: routing_policy.json
examples/: profile.example.json  registry.example.json
skillos/: SKILL.md
skillos/agents/: openai.yaml
src/skillos/: __init__.py  cli.py  config.py  feedback.py  intent.py  models.py  ranking.py  scanner.py  trace.py  workflow.py
tests/: test_config.py  test_feedback.py  test_intent.py  test_ranking.py  test_scanner.py
