[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillos"
version = "0.1.0"
description = "Privacy-first, user-configured skill routing for Codex"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SkillOS contributors"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.scripts]
skillos = "skillos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
